--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "fejl": "^3.0.1",
+    "ioredis": "^5.3.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.19",
